@@ -1,3 +1,8 @@
+Sun Jan  6 19:05:46 GMT 2002  Colin Watson  <cjwatson@debian.org>
+
+	* src/lexgrog.l: Use {blank_eol}, not [blank_eol]. The latter
+	  matches in entirely inappropriate places.
+
 Sun Dec 23 06:17:47 GMT 2001  Colin Watson  <cjwatson@debian.org>
 
 	* src/man.c (long_options, usage, man_getopt): Add a new
